Use white background for transitions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         padding: 0;
         width: 100%;
         height: 100%;
-        background-color: black;
+        background-color: white;
         overflow: hidden;
       }
 
@@ -19,7 +19,7 @@
         top: 0; left: 0;
         width: 100%;
         height: 100%;
-        background-color: black;
+        background-color: white;
         transition: opacity 0.5s ease-in-out; /* crossfade duration */
         opacity: 0;
       }
@@ -37,7 +37,7 @@
         width: 100%;
         height: 100%;
         object-fit: contain; /* or 'cover' if you prefer fill/crop */
-        background-color: black;
+        background-color: white;
         display: block;
       }
 
@@ -90,7 +90,7 @@
   </head>
   <body>
     <div id="hint">
-      Press [Shift] to toggle debug. Press [H] to show/hide this menu. Press [M] to mute/unmute. Press [T] to toggle always-on-top. Press digit keys to switch folders (1,2,3,...)
+      Press [Shift] to toggle debug. Press [H] to show/hide this menu. Press [M] to mute/unmute. Press [T] to toggle always-on-top. Press [N] or [→] to skip to next asset. Press digit keys to switch folders (1,2,3,...)
     </div>
     <!-- Two "containers" for crossfade, can hold <img> or <video> -->
     <div id="containerA" class="mediaContainer hidden"></div>
