Sync hint overlay shortcuts

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
     </style>
   </head>
   <body>
-    <div id="hint">
-      Press [Shift] to toggle debug. Press [H] to show/hide this menu. Press [M] to mute/unmute. Press [T] to toggle always-on-top. Press [N] or [→] to skip to next asset. Press digit keys to switch folders (1,2,3,...)
+    <div id="hint" data-shortcuts="Press [Shift] = toggle debug|Press [H] = show/hide this menu|Press [M] = mute/unmute|Press [T] = toggle always-on-top">
+      Loading shortcuts...
     </div>
     <!-- Two "containers" for crossfade, can hold <img> or <video> -->
     <div id="containerA" class="mediaContainer hidden"></div>
