Add skip shortcut and toast feedback

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </style>
   </head>
   <body>
-    <div id="hint" data-shortcuts="Press [Shift] = toggle debug|Press [H] = show/hide this menu|Press [M] = mute/unmute|Press [T] = toggle always-on-top">
+    <div id="hint" data-shortcuts="Press [Shift] = toggle debug|Press [H] = show/hide this menu|Press [M] = mute/unmute|Press [T] = toggle always-on-top|Press [N] or [→] = skip to next asset">
       Loading shortcuts...
     </div>
     <!-- Two "containers" for crossfade, can hold <img> or <video> -->
